--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Stoplight <support@stoplight.io>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/abdut007/elements.git"
+    "url": "https://github.com/Sofdesk/elements.git"
   },
   "license": "Apache-2.0",
   "engines": {
@@ -26,7 +26,7 @@
     "react-dom": ">=16.8"
   },
   "dependencies": {
-    "@stoplight/elements-core": "git+https://github.com/abdut007/element.git#elements-core",
+    "@stoplight/elements-core": "git+https://github.com/Sofdesk/elements.git#elements-core",
     "@stoplight/http-spec": "^5.1.4",
     "@stoplight/json": "^3.18.1",
     "@stoplight/mosaic": "^1.33.0",
